# gi-env-gen

./: .gitignore  BACKLOG.md  CONTEXT.md  README.md  pyproject.toml  tickets.md
docs/: environment-program.md
docs/adr/: 0002-two-stage-strict-builder-output.md
examples/reach-with-energy/: README.md  accepted-environment.json  acting-rollout.summary.json
scripts/: smoke_builder_matrix.py
src/gi_env_gen/: acting.py  builder.py  cli.py  model.py  openai_provider.py  runtime.py  structured_output.py
src/harness/: __init__.py  acting.py  builder.py  cli.py  dashboard.py  dashboard_projection.py  dashboard_rendering.py  evidence.py  model.py  openai_provider.py  program.py  program_validation.py  rule_formatting.py  runtime.py  structured_output.py
tests/: fixtures.py  test_acting.py  test_autonomous_failures.py  test_bounded_repeat.py  test_builder.py  test_cli.py  test_complete_composition.py  test_dashboard.py  test_generation_quality.py  test_openai_provider.py  test_possession_prerequisite.py  test_push_trigger.py  test_runtime.py  test_smoke_builder_matrix.py  test_timed_values.py
