[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gi-env-gen"
version = "0.1.0"
description = "LLM-authored deterministic 2D environment harness"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "pytest>=8", "types-jsonschema>=4.22"]

[project.scripts]
gi-env-gen = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["harness"]
